Handle encoding of FileResource properly - fix webpath problems with odd characters on Windows